--- a/src/CreateConsultantComponents/BusinessDetails/BusinessDetails.css
+++ b/src/CreateConsultantComponents/BusinessDetails/BusinessDetails.css
@@ -265,7 +265,7 @@ input::-webkit-input-placeholder {
   height: 60px;
   margin-top: 0;
   margin-left: 5px;
-  color:white;
+  color: white;
   font-family: oswald;
 }
 .searchButton:hover {
@@ -859,5 +859,29 @@ input::-webkit-input-placeholder {
   .mobileNotAvailabilityText {
     margin-top: 88px;
     margin-left: -85px;
+  }
+}
+
+@media only screen and (max-width: 1300px) and (min-width: 1200px) {
+  .customurlwidth1280 {
+    width: 300px !important;
+  }
+  .customURL {
+    border-width: 1px;
+    border-color: #d8c5a6;
+    border-radius: 0;
+    width: 22vw !important;
+    height: 60px !important;
+    margin-bottom: 0;
+    margin-top: 0;
+    font-weight: bold;
+    font-size: 16px;
+    font-family: Domine;
+    margin-left: -3vw;
+  }
+}
+@media only screen and (max-width: 1300px) and (min-width: 1236px) {
+  .customurlwidth1280 {
+    width: 350px !important;
   }
 }
