--- a/src/CreateConsultantComponents/PaymentConfirmation/PaymentConfirmation.css
+++ b/src/CreateConsultantComponents/PaymentConfirmation/PaymentConfirmation.css
@@ -128,6 +128,16 @@
   position: relative;
   cursor: pointer;
 }
+.pcFooterCard1 {
+  background: #6f6c6d;
+  width: 24em;
+  height: 10em;
+  border-radius: 0.5em;
+  margin-top: 2em;
+  margin-left: 6vw;
+  position: relative;
+  cursor: pointer;
+}
 .pcFooterLeftMargin {
   width: 1000px;
   margin: auto;
@@ -144,6 +154,29 @@
   position: absolute;
   right: 1em;
   bottom: 25%;
+}
+.pcFooterNextIcon1 {
+  color: white;
+  width: 3em;
+  height: 3.5em;
+  position: absolute;
+  right: 1em;
+  bottom: 55%;
+}
+.vine-app-store-logo {
+  height: 50px;
+  width: auto;
+  position: absolute;
+  right: 2em;
+  bottom: 12%;
+}
+
+.vine-play-store-logo {
+  height: 50px;
+  width: auto;
+  position: absolute;
+  right: 12.3em;
+  bottom: 11%;
 }
 .pcFooterMainIcon {
   position: absolute;
@@ -170,7 +203,7 @@
 .pcFooterText1 {
   color: white;
   position: absolute;
-  top: 15%;
+  top: 10%;
   left: 20%;
   width: 10em;
   font-size: 1.3em;
@@ -226,7 +259,7 @@
     overflow: hidden;
   }
   .pcFooterLeftMargin {
-    margin-left:160px;
+    margin-left: 160px;
     width: 500px;
   }
 }
@@ -243,7 +276,7 @@
   .pcFooter {
     background: #241f20;
     width: 100%;
-    height: 28em;
+    height: 35em;
     position: relative;
     bottom: 0;
     overflow: hidden;
@@ -267,6 +300,31 @@
     border-radius: 0.5em;
     margin-top: 2em;
     cursor: pointer;
+  }
+  .pcFooterCard1 {
+    background: #6f6c6d;
+    width: 20em !important;
+    height: 10em;
+    border-radius: 0.5em;
+    margin-top: 2em;
+    margin-left: 6vw;
+    position: relative;
+    cursor: pointer;
+  }
+  .vine-app-store-logo {
+    height: 43px;
+    width: auto;
+    position: absolute;
+    right: 1.3em;
+    bottom: 12%;
+  }
+
+  .vine-play-store-logo {
+    height: 45px;
+    width: auto;
+    position: absolute;
+    right: 9.7em;
+    bottom: 11%;
   }
   .pcFooterLeftMargin {
     margin-left: 50px;
@@ -382,7 +440,7 @@
   .pcFooterText1 {
     color: white;
     position: absolute;
-    top: 20%;
+    top: 13%;
     left: 20%;
     width: 10em;
     font-size: 1.1em;
@@ -501,6 +559,6 @@
     margin-left: 25px;
   }
   .pcFooterLeftMargin {
-   margin-left: 10px;
+    margin-left: 10px;
   }
 }
