--- a/src/CreateConsultantComponents/Agreement/Agreement.css
+++ b/src/CreateConsultantComponents/Agreement/Agreement.css
@@ -19,6 +19,13 @@
   margin-bottom: 0.5em !important;
   margin-top: 0.5em !important;
 }
+.AGhead3 {
+  font-size: calc(3px + 0.8vw);
+  font-family: oswald;
+  font-weight: 300;
+  margin-bottom: 0.5em !important;
+  margin-top: 1.5em !important;
+}
 .agreementButton1 {
   background: #dcba80;
   text-align: center;
@@ -136,10 +143,21 @@
     margin-top: 3em;
     margin-left: 2.5em;
   }
+  .AGhead2 {
+    font-size: 16px;
+    font-family: oswald;
+    font-weight: 300;
+  }
   .AGhead1 {
     font-size: 35px;
     font-weight: "bold";
     font-family: oswald;
+  }
+  .AGhead3 {
+    font-size: 16px;
+    font-family: oswald;
+    font-weight: 300;
+    margin-top: 2em !important;
   }
   .componentMargin {
     margin-top: 4em;
@@ -248,6 +266,12 @@
     font-size: 16px;
     font-family: oswald;
     font-weight: 300;
+  }
+  .AGhead3 {
+    font-size: 16px;
+    font-family: oswald;
+    font-weight: 300;
+    margin-top: 1.5em !important;
   }
   .agreementButton1 {
     background: #dcba80;
