--- a/src/CreateConsultantComponents/PaymentConfirmation/PaymentConfirmation.css
+++ b/src/CreateConsultantComponents/PaymentConfirmation/PaymentConfirmation.css
@@ -1,3 +1,11 @@
+.whileYouarewaiting {
+  color: #ffffff;
+  font-size: 16px;
+  font-family: Domine;
+  font-weight: 100;
+  padding: 30px;
+  letter-spacing: 0.25px;
+}
 .pcStepper {
   background: transparent;
   width: 70vw;
@@ -105,7 +113,6 @@
 .pcFooter {
   background: #241f20;
   width: 100%;
-  height: 70vh;
   padding-top: 1.5em;
   overflow: hidden;
 }
@@ -171,7 +178,7 @@
   bottom: 12%;
 }
 
-.vine-play-store-logo{
+.vine-play-store-logo {
   height: 50px;
   width: auto;
   position: absolute;
@@ -243,7 +250,6 @@
   .pcFooter {
     background: #241f20;
     width: 100%;
-    height: 33em;
     position: relative;
     bottom: 0;
     overflow: hidden;
@@ -276,7 +282,6 @@
   .pcFooter {
     background: #241f20;
     width: 100%;
-    height: 35em;
     position: relative;
     bottom: 0;
     overflow: hidden;
@@ -318,8 +323,8 @@
     right: 1.3em;
     bottom: 12%;
   }
-  
-  .vine-play-store-logo{
+
+  .vine-play-store-logo {
     height: 45px;
     width: auto;
     position: absolute;
@@ -481,8 +486,7 @@
     margin-top: -1em;
   }
 }
-.WithStyles\(ForwardRef\(StepConnector\)\)-completed-40
-  .WithStyles\(ForwardRef\(StepConnector\)\)-line-41 {
+.WithStyles\(ForwardRef\(StepConnector\)\)-completed-40 .WithStyles\(ForwardRef\(StepConnector\)\)-line-41 {
   border-color: #4ba380;
   margin-left: 0.3em;
   margin-top: 0.2em;
