--- a/src/CreateConsultantComponents/PaymentConfirmation/PaymentConfirmation.css
+++ b/src/CreateConsultantComponents/PaymentConfirmation/PaymentConfirmation.css
@@ -1,3 +1,12 @@
+.whileYouarewaiting {
+  color: #ffffff;
+  font-size: 23px !important;
+  font-family: oswald;
+  font-weight: 100;
+  padding: 30px;
+  letter-spacing: 0.25px;
+  text-align: center;
+}
 .pcStepper {
   background: transparent;
   width: 70vw;
@@ -86,7 +95,7 @@
 .pcHead4 {
   font-family: oswald;
   font-weight: 400;
-  font-size: 1.4em;
+  font-size: 23px !important;
   margin-top: 1em;
   text-align: center;
   margin-left: auto;
@@ -105,7 +114,6 @@
 .pcFooter {
   background: #241f20;
   width: 100%;
-  height: 70vh;
   padding-top: 1.5em;
   overflow: hidden;
 }
@@ -139,13 +147,14 @@
   cursor: pointer;
 }
 .pcFooterLeftMargin {
-  width: 1000px;
+  width: 950px;
+  text-align: center;
   margin: auto;
 }
 .pcCardMarginLeft {
   margin-left: auto;
   margin-right: auto;
-  margin-top: 3em;
+  margin-top: 2em;
 }
 .pcFooterNextIcon {
   color: white;
@@ -171,7 +180,7 @@
   bottom: 12%;
 }
 
-.vine-play-store-logo{
+.vine-play-store-logo {
   height: 50px;
   width: auto;
   position: absolute;
@@ -240,10 +249,12 @@
 }
 
 @media only screen and (max-width: 768px) {
+  .mobileStackLeftMargin {
+    margin-left: -10px;
+  }
   .pcFooter {
     background: #241f20;
     width: 100%;
-    height: 33em;
     position: relative;
     bottom: 0;
     overflow: hidden;
@@ -265,6 +276,9 @@
 }
 
 @media only screen and (max-width: 550px) {
+  .mobileStackLeftMargin {
+    margin-left: -10px;
+  }
   .pcStepper {
     background: transparent;
     width: 70vw;
@@ -276,7 +290,6 @@
   .pcFooter {
     background: #241f20;
     width: 100%;
-    height: 35em;
     position: relative;
     bottom: 0;
     overflow: hidden;
@@ -318,8 +331,8 @@
     right: 1.3em;
     bottom: 12%;
   }
-  
-  .vine-play-store-logo{
+
+  .vine-play-store-logo {
     height: 45px;
     width: auto;
     position: absolute;
@@ -375,7 +388,7 @@
   .pcHead4 {
     font-family: oswald;
     font-weight: 400;
-    font-size: 1.1em;
+    font-size: 20px !important;
     margin-top: 1em;
     text-align: left;
     padding-left: 1em;
@@ -560,5 +573,19 @@
   }
   .pcFooterLeftMargin {
     margin-left: 10px;
+  }
+}
+@media only screen and (max-width: 2500px) and (min-width: 1500px) {
+  .pcFooterLeftMargin {
+    width: 1000px;
+    text-align: center;
+    margin: auto;
+  }
+}
+@media only screen and (max-width: 3100px) and (min-width: 2500px) {
+  .pcFooterLeftMargin {
+    width: 1050px;
+    text-align: center;
+    margin: auto;
   }
 }
