--- a/src/CreateConsultantComponents/ConfirmDetails/ConfirmDetails.css
+++ b/src/CreateConsultantComponents/ConfirmDetails/ConfirmDetails.css
@@ -49,6 +49,9 @@
 }
 .Input:focus {
   border-color: #d8c5a6 !important;
+  outline:none !important;
+  border-color:#d8c5a6 !important;
+  box-shadow:0 0 10px #d8c5a6 !important;
 }
 .Red {
   border-width: 1px;
@@ -171,8 +174,11 @@
   font-family: Domine !important;
   font-weight: 600 !important;
 }
-.edit-Input:focus {
+.edit-Input:focus-within {
   border-color: #d8c5a6 !important;
+  outline:none !important;
+  border-color:#d8c5a6 !important;
+  box-shadow:0 0 10px #d8c5a6 !important;
 }
 .edit-Red {
   border-width: 1px;
@@ -196,6 +202,11 @@
 .edit-InputMargin {
   margin-top: 8px;
   margin-bottom: 16px;
+}
+.edit-InputMargin:focus {
+  outline:none !important;
+  border-color:#d8c5a6 !important;
+  box-shadow:0 0 10px #d8c5a6 !important;
 }
 
 .staticText5 {
@@ -302,6 +313,12 @@ select {
   padding: 16px;
   padding-right: 32px;
 }
+
+select:focus{
+  outline:none !important;
+  border-color:#d8c5a6 !important;
+  box-shadow:0 0 10px #d8c5a6 !important;
+}  
 
 .forgotPassowordContainer {
   padding-top: 3em;
@@ -511,6 +528,9 @@ input:disabled {
   }
   .edit-Input:focus {
     border-color: #d8c5a6 !important;
+    outline:none !important;
+    border-color:#d8c5a6 !important;
+    box-shadow:0 0 10px #d8c5a6 !important;
   }
   .edit-Red {
     border-width: 1px;
