--- a/src/CreateConsultantComponents/PurchaseKit/PurchaseKit.css
+++ b/src/CreateConsultantComponents/PurchaseKit/PurchaseKit.css
@@ -2,7 +2,7 @@
   margin-top: 32px;
 }
 .purchaseComponentMargin2 {
-  overflow: hidden;
+  /* overflow: hidden; */
   margin-top: 32px;
 }
 .PKmobileComponent {
@@ -98,6 +98,9 @@
 }
 .purchaseInput:focus {
   border-color: #d8c5a6 !important;
+  outline:none !important;
+  border-color:#d8c5a6 !important;
+  box-shadow:0 0 10px #d8c5a6 !important;
 }
 .purchaseRed {
   border-width: 1px;
@@ -142,6 +145,9 @@
 }
 .purchaseInput1:focus {
   border-color: #d8c5a6 !important;
+  outline:none !important;
+  border-color:#d8c5a6 !important;
+  box-shadow:0 0 10px #d8c5a6 !important;
 }
 .purchaseRed1 {
   border-width: 1px;
@@ -188,6 +194,9 @@
 }
 .purchaseInput2:focus {
   border-color: #d8c5a6 !important;
+  outline:none !important;
+  border-color:#d8c5a6 !important;
+  box-shadow:0 0 10px #d8c5a6 !important;
 }
 .purchaseRed2 {
   border-width: 1px;
@@ -214,6 +223,9 @@
   }
   .purchaseInput2:focus {
     border-color: #d8c5a6 !important;
+    outline:none !important;
+    border-color:#d8c5a6 !important;
+    box-shadow:0 0 10px #d8c5a6 !important;
   }
   .purchaseRed2 {
     border-width: 1px;
@@ -245,7 +257,7 @@
     margin-right: 50px;
   }
   .purchaseComponentMargin2 {
-    overflow: hidden;
+    /* overflow: hidden; */
     margin-top: 32px;
     margin-left: 50px;
     margin-right: 50px;
@@ -282,6 +294,9 @@
   }
   .purchaseInput:focus {
     border-color: #d8c5a6 !important;
+    outline:none !important;
+    border-color:#d8c5a6 !important;
+    box-shadow:0 0 10px #d8c5a6 !important;
   }
   .purchaseRed {
     border-width: 1px;
@@ -305,6 +320,9 @@
   }
   .purchaseInput1:focus {
     border-color: #d8c5a6 !important;
+    outline:none !important;
+    border-color:#d8c5a6 !important;
+    box-shadow:0 0 10px #d8c5a6 !important;
   }
   .purchaseRed1 {
     border-width: 1px;
@@ -327,6 +345,9 @@
   }
   .purchaseInput2:focus {
     border-color: #d8c5a6 !important;
+    outline:none !important;
+    border-color:#d8c5a6 !important;
+    box-shadow:0 0 10px #d8c5a6 !important;
   }
   .purchaseRed2 {
     border-width: 1px;
