--- a/src/CreateConsultantComponents/PurchaseKit/PurchaseKit.css
+++ b/src/CreateConsultantComponents/PurchaseKit/PurchaseKit.css
@@ -1,8 +1,38 @@
 .description-text {
   font-size: 13px;
-  color:rgb(70, 63, 63);
-  margin-bottom:7px;
+  color: rgb(70, 63, 63);
+  margin-bottom: 7px;
+  font-family: Domine;
 }
+.description-text-1 {
+  font-size: 15px;
+  color: black;
+  font-family: Domine;
+  font-weight: 600;
+}
+.description-text-2 {
+  font-size: 15px;
+  color: rgb(94, 83, 83);
+  font-family: Domine;
+  font-weight: 600;
+}
+.description-text-3 {
+  font-size: 15px;
+  color: black;
+  font-family: Domine;
+  font-weight: 600;
+}
+.description-text-4 {
+  font-size: 13px;
+  color: black;
+  font-family: Domine;
+  font-weight: 600;
+  margin-left: 20px;
+}
+.coupon-tag {
+  margin-top: -3px;
+}
+
 .col-lg-3discount {
   width: 16%;
 }
@@ -325,16 +355,50 @@
   .mod-price-2 {
     width: 20%;
   }
-  .description-text {
-    font-size: 10px;
-    width: 90%;
-    margin-bottom:10px;
+  .coupon-tag {
+    margin-top: -3px;
   }
+
   .col-lg-3discount {
     width: 23%;
   }
   .col-lg-1hypen {
     width: 1%;
+  }
+
+  .description-text {
+    font-size: 10px;
+    width: 95%;
+    margin-bottom: 10px;
+  }
+
+  .description-text-1 {
+    font-size: 14px;
+    color: black;
+    font-family: Domine;
+    font-weight: 600;
+    margin-right: 20px;
+  }
+  .description-text-2 {
+    font-size: 14px;
+    color: rgb(94, 83, 83);
+    font-family: Domine;
+    font-weight: 600;
+    margin-left: 15px;
+  }
+  .description-text-3 {
+    font-size: 13px;
+    color: black;
+    font-family: Domine;
+    font-weight: 600;
+  }
+  .description-text-4 {
+    font-size: 13px;
+    color: black;
+    font-family: Domine;
+    font-weight: 600;
+    margin-left: 20px;
+    width: 100%;
   }
 
   .purchaseInput {
@@ -497,3 +561,31 @@
   }
 }
 
+@media (max-width: 360px) and (min-width: 290px) {
+  .description-text {
+    font-size: 10px;
+    width: 100%;
+    margin-bottom: 10px;
+  }
+}
+@media (max-width: 375px) and (min-width: 361px) {
+  .description-text {
+    font-size: 10px;
+    width: 95%;
+    margin-bottom: 10px;
+  }
+}
+@media (max-width: 411px) and (min-width: 376px) {
+  .description-text {
+    font-size: 10px;
+    width: 85%;
+    margin-bottom: 10px;
+  }
+}
+@media (max-width: 500px) and (min-width: 411px) {
+  .description-text {
+    font-size: 10px;
+    width: 87%;
+    margin-bottom: 10px;
+  }
+}
